Update Bootstrap.java